--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 measurements-10k.txt filter=lfs diff=lfs merge=lfs -text
 measurements-10m.txt filter=lfs diff=lfs merge=lfs -text
+measurements-1m.txt filter=lfs diff=lfs merge=lfs -text
